--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -66,6 +66,8 @@ a:hover {
     .App {
       display: flex;
       flex-direction: column;
+      width: 100%;
+      height: 100%;
     }
 
     $header-height: 75px;
@@ -87,7 +89,7 @@ a:hover {
           color: $color-font;
           cursor: pointer;
         }
-        
+
         span:hover {
           color: $color-primary-light;
         }
@@ -99,6 +101,10 @@ a:hover {
     }
 
     .App-main {
+      flex: 1;
+    }
+
+    .mian-container {
       flex: 1;
     }
   }
